Fix jei modifier integration not updating on reload